1.0.0
======

 - Pin groups

0.9.99
======

 - See the status timeline of your friends
 - Reuse previous statuses
 - Send profiles to your groups
 - Forms can now run scripts

0.9.98
======

 - Set reminder category
 - Set script category
 - Add forms to your pages

0.9.97
======

 - Various UI improvements

0.9.96
======

 - Add a photo to your status
 - Custom page URLs
 - Add your groups to your home screen

0.9.95
======

 - View page visits
 - Easily add reminders on a specific day

0.9.94
======

 - Slide messages to quickly reply
 - Reply to messages from notification

0.9.93
======

 - Accounts & points
 - Upgrade pages
 - Reply in new group
 - Add profiles in page content

0.9.92
======

 - Share your current status

0.9.91
======

 - Search messages
 - Speak messages
 - Offline note

0.9.90
======

 - Support for bots

0.9.89
======

 - Add NPCs to cards

0.9.88
======

 - Map improvements
 - Slideshow improvements
 - Stories no longer have a minimum word count

0.9.87
======

 - Option to show group cover photos in page content
 - Add groups from content creator
 - Promote members to host
 - Set page background
 - Set story background
 - Page slideshow
 - Improved Kiosk mode

0.9.86
======

 - Comment on stories

0.9.85
======

 - Send trades to your groups
 - Invite people to your reminders
 - Send drawings

0.9.84
======

 - Add pages to your homescreen
 - Trade from your groups
 - View trade history
 - Trade notes

0.9.83
======

 - Improved onboarding
 - View stories on profiles
 - Embed webpages in pages
 - Select partial text in messages

0.9.82
======

 - Manage group settings
 - See who hosts the group
 - Link previews in messages
 - Edit messages
 - View script source
 - React to stories

0.9.81
======

 - Equip items

0.9.80
======

 - View and edit your scripts

0.9.79
======

 - Script widgets

0.9.78
======

 - Drop items on the map

0.9.77
======

 - Improved map experience
 - See people's subscriber and stories count

0.9.76
======
