@@ -2,6 +2,7 @@
 ======
 
  - Pin groups
+ - See local time on profiles
 
 0.9.99
 ======
